init remote registry

--- a/public/options.html
+++ b/public/options.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Forty Extension</title>
+    <title>Forty Extension -- options</title>
   </head>
   <body>
     <div id="root"></div>
