--- a/public/sidePanel.html
+++ b/public/sidePanel.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Forty Extension</title>
+    <title>Forty Extension -- SidePannel</title>
+    <style>
+      
+    </style>
   </head>
-  <body>
+  <body >
     <div id="root"></div>
 
   </body>
